--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4",
     "webpack": "^5.94.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server --watch db.json --port 5000",
+    "dev": "concurrently \"npm start\" \"npm run server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "tailwindcss": "^3.4.11"
   }
