--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
     "icons": "^1.0.0",
     "react": "^18.3.1",
@@ -17,6 +19,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13",
+    "typescript": "^5.6.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.94.0"
   },
